--- a/index.html
+++ b/index.html
@@ -164,35 +164,30 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
                   <h2 class="title">About me</h2>
                   <div class="w3-row-padding">
       <div class="w3-col m9 w3-justify">
-      	<p>I am a Member of Technical Staff (Research) at <a href="https://contextual.ai">Contextual AI</a>.
-          Before Contextual AI, I was a Ph.D. student at <a href="https://www.khoury.northeastern.edu/">Khoury College of Computer Sciences </a>
-          at <a href="https://www.northeastern.edu/">Northeastern University</a>,
-          where I started the Fall of 2020.
-          I am very fortunate to be advised by <a href="https://www.ccs.neu.edu/home/hlnguyen/"> Huy Le Nguyen</a>.
-          I am interested in optimization and machine learning.</p>
-
-          <p>Before Khoury, I graduated from <a href="https://uci.edu">University of California, Irvine</a> in 2020 with a
-            B.S. in Computer Science and Engineering and a B.S. in Mathematics.
-            In the Summer of 2019, I worked with <a href="https://www.math.ucla.edu/~bertozzi/">Andrea Bertozzi</a> at
-            UCLA's <a href="https://www.marcusroper.org/reuucla">REU program in Computational and Applied Mathematics</a>.
-          </p>
-
-      </div>
-
-
-    </div>
-
-              </div>
-          </div>
-      </div>
-      <div class="pagecontents">
-
+	<p>I am a Member of Technical Staff (Research) at <a href="https://contextual.ai">Contextual AI</a>.
+	  Before Contextual AI, I was a Ph.D. student at <a href="https://www.khoury.northeastern.edu/">Khoury College of Computer Sciences </a>
+	  at <a href="https://www.northeastern.edu/">Northeastern University</a>,
+	  where I started the Fall of 2020.
+	  I am very fortunate to be advised by <a href="https://www.ccs.neu.edu/home/hlnguyen/"> Huy Le Nguyen</a>.
+	  I am interested in optimization and machine learning, which is the topic of my
+	<a href="https://thienhangnguyen.github.io/thesis.pdf" target="_blank" rel="noopener noreferrer">
+	Thesis.</a>
+	</p>
+	<p>Before Khoury, I graduated from <a href="https://uci.edu">University of California, Irvine</a> in 2020 with a
+	B.S. in Computer Science and Engineering and a B.S. in Mathematics.
+	In the Summer of 2019, I worked with <a href="https://www.math.ucla.edu/~bertozzi/">Andrea Bertozzi</a> at
+	UCLA's <a href="https://www.marcusroper.org/reuucla">REU program in Computational and Applied Mathematics</a>.
+	</p>
       </div>
     </div>
 </div>
+</div>
+</div>
+<div class="pagecontents"></div>
+</div>
+</div>
 
 <div id="publications" class="page currentpage" data-pos="p2" style="z-index: 500; left: 15%;">
-
   <div class="page-container">
     <div class="pageheader">
     <div class="headercontent">
