--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
                   <div class="w3-row-padding">
       <div class="w3-col m9 w3-justify">
 	<p>I am a Member of Technical Staff (Research) at <a href="https://contextual.ai">Contextual AI</a>.
-	  Before Contextual AI, I was a Ph.D. student at <a href="https://www.khoury.northeastern.edu/">Khoury College of Computer Sciences </a>
+	  Before Contextual AI, I completed my Ph.D. in March 2025 at <a href="https://www.khoury.northeastern.edu/">Khoury College of Computer Sciences </a>
 	  at <a href="https://www.northeastern.edu/">Northeastern University</a>,
 	  where I started the Fall of 2020.
 	  I am very fortunate to be advised by <a href="https://www.ccs.neu.edu/home/hlnguyen/"> Huy Le Nguyen</a>.
@@ -217,7 +217,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
               </a></h4>
                 <div class="pubauthor">Thien Hang Nguyen and Huy Le Nguyen.</div>
                <div class="pubcite">
-             OPTML workshop at NeurIPS24.
+             Optimization for Machine Learning Workshop at NeurIPS, Vancouver, 2024.
               </div>
             </div>
           </li>
