--- a/index.html
+++ b/index.html
@@ -165,10 +165,9 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
                   <div class="w3-row-padding">
       <div class="w3-col m9 w3-justify">
 	<p>I am a Member of Technical Staff (Research) at <a href="https://contextual.ai">Contextual AI</a>.
-	  Before Contextual AI, I completed my Ph.D. in March 2025 at <a href="https://www.khoury.northeastern.edu/">Khoury College of Computer Sciences </a>
+	I completed my Ph.D. in March 2025 at <a href="https://www.khoury.northeastern.edu/">Khoury College of Computer Sciences </a>
 	  at <a href="https://www.northeastern.edu/">Northeastern University</a>,
-	  where I started the Fall of 2020.
-	  I am very fortunate to be advised by <a href="https://www.ccs.neu.edu/home/hlnguyen/"> Huy Le Nguyen</a>.
+	  where I started the Fall of 2020 and was very fortunate to be advised by <a href="https://www.ccs.neu.edu/home/hlnguyen/"> Huy Le Nguyen</a>.
 	  I am interested in optimization and machine learning, which is the topic of my
 	<a href="https://thienhangnguyen.github.io/thesis.pdf" target="_blank" rel="noopener noreferrer">
 	Thesis.</a>
