--- a/index.html
+++ b/index.html
@@ -197,13 +197,15 @@
               <h2 class="title">About me</h2>
               <div class="w3-row-padding">
                 <div class="w3-col m9 w3-justify">
-                  <p>I am a Member of Technical Staff (Research) at <a href="https://contextual.ai">Contextual AI</a>.
-                    I completed my Ph.D. in March 2025 at <a href="https://www.khoury.northeastern.edu/">Khoury College
+                  <p>I am a Member of Technical Staff (Research) at <a href="https://contextual.ai">Contextual AI</a>. 
+                    I am working on agentic search.</p>
+                  
+                  <p>I completed my Ph.D. in March 2025 at <a href="https://www.khoury.northeastern.edu/">Khoury College
                       of Computer Sciences </a>
                     at <a href="https://www.northeastern.edu/">Northeastern University</a>,
                     where I started the Fall of 2020 and was very fortunate to be advised by <a
                       href="https://www.ccs.neu.edu/home/hlnguyen/"> Huy Le Nguyen</a>.
-                    I am interested in optimization and machine learning, which is the topic of my
+                    There, I worked on optimization and machine learning, which is the topic of my
                     <a href="https://thienhangnguyen.github.io/thesis.pdf" target="_blank" rel="noopener noreferrer">
                       Thesis.</a>
                   </p>
