--- a/index.html
+++ b/index.html
@@ -197,8 +197,7 @@
               <h2 class="title">About me</h2>
               <div class="w3-row-padding">
                 <div class="w3-col m9 w3-justify">
-                  <p>I am a Member of Technical Staff (Research) at <a href="https://contextual.ai">Contextual AI</a>. 
-                    I am working on agentic search.</p>
+                  <p>I am a Member of Technical Staff (Research) at <a href="https://contextual.ai">Contextual AI</a>, working on agentic search and information retrieval.</p>
                   
                   <p>I completed my Ph.D. in March 2025 at <a href="https://www.khoury.northeastern.edu/">Khoury College
                       of Computer Sciences </a>
