Add new blog entry to index.html

--- a/index.html
+++ b/index.html
@@ -375,6 +375,17 @@
         <div class="pagecontents">
           <ul>
             <li>
+               <div class="pub">
+                 <h4 class="pubtitle">
+                     href="https://contextual.ai/blog/open-sourcing-the-best-local-text-to-sql-system"
+                     target="_blank" rel="noopener noreferrer">
+                     Open-Sourcing the Best Local Text-to-SQL System
+                   </a></h4>
+                 <div class="pubauthor">Sheshansh Agrawal and Thien Nguyen.</div>
+                 <div class="pubcite">Jul 2, 2025.</div>
+               </div>
+             </li>
+            <li>
               <div class="pub">
                 <h4 class="pubtitle"><a
                     href="https://medium.com/@thienhn97/interpreting-deep-neural-networks-memorization-kernels-nearest-neighbors-and-attention-6bf0cefc7619"
