--- a/index.html
+++ b/index.html
@@ -197,8 +197,9 @@
               <h2 class="title">About me</h2>
               <div class="w3-row-padding">
                 <div class="w3-col m9 w3-justify">
-                  <p>I am a Member of Technical Staff (Research) at <a href="https://contextual.ai">Contextual AI</a>, working on agentic search and information retrieval.</p>
-                  
+                  <p>I am a Member of Technical Staff (Research) at <a href="https://contextual.ai">Contextual AI</a>,
+                    working on agentic search and information retrieval.</p>
+
                   <p>I completed my Ph.D. in March 2025 at <a href="https://www.khoury.northeastern.edu/">Khoury College
                       of Computer Sciences </a>
                     at <a href="https://www.northeastern.edu/">Northeastern University</a>,
@@ -375,16 +376,16 @@
         <div class="pagecontents">
           <ul>
             <li>
-               <div class="pub">
-                 <h4 class="pubtitle">
-                     href="https://contextual.ai/blog/open-sourcing-the-best-local-text-to-sql-system"
-                     target="_blank" rel="noopener noreferrer">
-                     Open-Sourcing the Best Local Text-to-SQL System
-                   </a></h4>
-                 <div class="pubauthor">Sheshansh Agrawal and Thien Nguyen.</div>
-                 <div class="pubcite">Jul 2, 2025.</div>
-               </div>
-             </li>
+              <div class="pub">
+                <h4 class="pubtitle"><a
+                    href="https://contextual.ai/blog/open-sourcing-the-best-local-text-to-sql-system"
+                    target="_blank" rel="noopener noreferrer">
+                    Open-Sourcing the Best Local Text-to-SQL System
+                  </a></h4>
+                <div class="pubauthor">Sheshansh Agrawal and Thien Nguyen.</div>
+                <div class="pubcite">Jul 2, 2025.</div>
+              </div>
+            </li>
             <li>
               <div class="pub">
                 <h4 class="pubtitle"><a
